traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
      - "*.localdomain"
  rules:
  - http:
      paths:
      - path: /traefik
        pathType: Prefix
        backend:
          service:
            name: traefik-web-ui
            port:
              number: 8080
